Class that only writes out every second line.