@@ -1,15 +1,22 @@
 package pl.targosz.homework;
 
-import java.io.File;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+
 
 public class FileSecondLineWrite {
     public static void main(String[] args) throws IOException {
-        File file = new File("E:\\KURS JAVA\\Workspaceofficial\\JavaRepository\\src\\main\\java\\pl\\targosz\\homework\\resources\\data.txt");
-        String text = Files.readString(Path.of("E:\\KURS JAVA\\Workspaceofficial\\JavaRepository\\src\\main\\java\\pl\\targosz\\homework\\resources\\data.txt"));
+        Path file = Paths.get("src/main/java/pl/targosz/homework/resources/data.txt");
+        double lineCounter = Files.lines(file).count();
 
+            for (int n=0;n<lineCounter;n+=2) {
+                String line = Files.readAllLines(Paths.get("src/main/java/pl/targosz/homework/resources/data.txt")).get(n);
+                System.out.println(line);
+
+            }
 
     }
 }
